--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <style>
+            .header{
+                height: 80px;
+                width: 412px;
+                background-color: #EFD896;
+            }
+        </style>
         <body>
-            <h1>Hello world</h1>
+            <div class="header">
+            <img src="C:\HTML & CSS\Project work\Logo.png" class="logo">
+            
+            </div>
         </body>
     </head>
 </html>
