--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
                 height: 80px;
                 width: 412px;
                 background-color: #EFD896;
+                display: flex;
+                justify-content: space-between;
             }
         </style>
         <body>
             <div class="header">
             <img src="C:\HTML & CSS\Project work\Logo.png" class="logo">
-            
+            <img src="C:\HTML & CSS\Project work\hello tim.png" class="profile">
             </div>
         </body>
     </head>
