--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <style>
+            html{
+                width: 412px;
+            }
             .header{
                 height: 80px;
                 width: 412px;
@@ -9,12 +12,90 @@
                 display: flex;
                 justify-content: space-between;
             }
+            .menu{
+                display: flex;
+                justify-content: center;
+                padding-top: 10px;
+                padding-bottom: 10px;
+            }
+            .menubtn{
+                cursor: pointer;
+                background-color: #EFD896;
+                width: 100px;
+                height: 40px;
+                border-radius: 14px;
+            }
+            .menuRow1{
+                display: flex;
+                justify-content: space-around;
+                padding-bottom: 5px;
+            }
+            .menuRow2{
+              display: flex;
+              justify-content: space-around; 
+              padding-bottom: 15px; 
+            }
+            .veganBurger{
+                cursor: pointer;
+                background-color: #EFD896;
+                width: 125px;
+                height: 40px;
+                border-radius: 5px;
+            }
+            .chickenBurger{
+                cursor: pointer;
+                background-color: #DAD0AA;
+                width: 125px;
+                height: 40px;
+                border-radius: 5px;
+            }
+            .hamburger{
+                cursor: pointer;
+                background-color: #EFD896;
+                width: 112px;
+                height: 40px;
+                border-radius: 5px;
+            }
+            .fingerFood{
+                cursor: pointer;
+                background-color: #EFD896;
+                width: 114px;
+                height: 40px;
+                border-radius: 5px;
+            }
+             .beverages{
+                cursor: pointer;
+                background-color: #EFD896;
+                width: 102px;
+                height: 40px;
+                border-radius: 5px;
+            }
+            .dessert{
+                cursor: pointer;
+                background-color: #EFD896;
+                width: 100px;
+                height: 40px;
+                border-radius: 5px;
+            }
         </style>
         <body>
             <div class="header">
             <img src="C:\HTML & CSS\Project work\Logo.png" class="logo">
             <img src="C:\HTML & CSS\Project work\hello tim.png" class="profile">
             </div>
+            <div class="menu">
+                    <button class="menubtn">Menu</button>
+            </div>
+            <div class="menuRow1">
+                <button class="veganBurger">Vegan Burgers</button>
+                <button class="chickenBurger">Chicken Burgers</button>
+                <button class="hamburger">Hambergers</button>
+            </div>
+            <div class="menuRow2">
+                <button class="fingerFood">Finger Foods</button>
+                <button class="beverages">Beverages</button>
+                <button class="dessert">Desserts</button>
+            </div>
         </body>
     </head>
-</html>
+</html>>
