--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </style>
         <body>
             <div class="header">
-            <img src="C:\HTML & CSS\Project work\Logo.png" class="logo">
-            <img src="C:\HTML & CSS\Project work\hello tim.png" class="profile">
+            <img src="https://www.figma.com/design/mSclElp7ZoJ9TbqaBcsnJS/Untitled?node-id=67-2&t=KaXcPdQcm5pa0tLS-4" class="logo">
+            <img src="https://www.figma.com/design/mSclElp7ZoJ9TbqaBcsnJS/Untitled?node-id=67-59&t=KaXcPdQcm5pa0tLS-4" class="profile">
             </div>
             <div class="menu">
                     <button class="menubtn">Menu</button>
