--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </style>
         <body>
             <div class="header">
-            <img src="https://www.figma.com/design/mSclElp7ZoJ9TbqaBcsnJS/Untitled?node-id=67-2&t=KaXcPdQcm5pa0tLS-4" class="logo">
+            <img src="Logo.png" class="logo">
             <img src="https://www.figma.com/design/mSclElp7ZoJ9TbqaBcsnJS/Untitled?node-id=67-59&t=KaXcPdQcm5pa0tLS-4" class="profile">
             </div>
             <div class="menu">
