--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <body>
             <div class="header">
             <img src="https://github.com/upekshaeshani/Project-work/blob/0dd66df9ce7e593a16afe64a2c7b5872f75202f5/Logo.png" class="logo">
-            <img src="https://www.figma.com/design/mSclElp7ZoJ9TbqaBcsnJS/Untitled?node-id=67-59&t=KaXcPdQcm5pa0tLS-4" class="profile">
+            <img src="https://github.com/upekshaeshani/Project-work/blob/d5ca27a34e9d971c9f0d939d9531cc49a8dd4a15/hello%20tim.png" class="profile">
             </div>
             <div class="menu">
                     <button class="menubtn">Menu</button>
