--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <body>
             <div class="header">
             <img src="https://github.com/upekshaeshani/Project-work/blob/f3ff20a2aa549ec8f1d26ba055a02792fcf5cdae/Logo.png" class="logo">
-            <img src="https://github.com/upekshaeshani/Project-work/blob/d5ca27a34e9d971c9f0d939d9531cc49a8dd4a15/hello%20tim.png" class="profile">
+            <img src="hello tim.png" class="profile">
             </div>
             <div class="menu">
                     <button class="menubtn">Menu</button>
