--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </style>
         <body>
             <div class="header">
-            <img src="https://github.com/upekshaeshani/Project-work/blob/f3ff20a2aa549ec8f1d26ba055a02792fcf5cdae/Logo.png" class="logo">
+            <img src="Logo.png" class="logo">
             <img src="hello tim.png" class="profile">
             </div>
             <div class="menu">
