--- a/index.html
+++ b/index.html
@@ -77,6 +77,27 @@
                 height: 40px;
                 border-radius: 5px;
             }
+            .searchBar{
+                height: 40px;
+                width: 312px;
+                background-color: #EFD896;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+                border-radius: 12px;
+            }
+            img.searchicon{
+                display: flex;
+                justify-content: space-between;
+                width: 25px;
+                height: 25px;
+                padding-right: 5px;
+                padding-left: 5px;
+            }
+            .searchtext{
+                display: flex;
+                justify-content: space-between;
+            }
         </style>
         <body>
             <div class="header">
@@ -95,6 +116,10 @@
                 <button class="fingerFood">Finger Foods</button>
                 <button class="beverages">Beverages</button>
                 <button class="dessert">Desserts</button>
+            </div>
+            <div class="searchBar">
+                <img src="Search icon.png" class="searchicon">
+                <div class="searchtext">Search for burgers</div>
             </div>
         </body>
     </head>
