--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="searchBar">
                 <img src="Search icon.png" class="searchicon">
                 <div class="searchtext">Search for burgers</div>
-                <div class="filtericon"><img src=""></div>
+                <div class="filtericon"><img src="Filter icon.png"></div>
             </div>
         </body>
     </head>
