--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
                 <button class="beverages">Beverages</button>
                 <button class="dessert">Desserts</button>
             </div>
+            <div class="searchSection">
             <div class="searchBar">
                 <img src="Search icon.png" class="searchicon">
                 <div class="searchtext">Search for burgers</div>
             </div>
             <div class="filtericon"><img src="Filter icon.png"></div>
+            </div>
         </body>
     </head>
 </html>>
