--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <img src="Search icon.png" class="searchicon">
                 <div class="searchtext">Search for burgers</div>
             </div>
-            <div class="filtericon"><img src="Filter icon.png"></div>
+            <div class="filtericon"><img src="Filter icon.png" class="filter"></div>
+
             </div>
         </body>
     </head>
