--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
                 <link rel="stylesheet" href="styles.css"/>
+                <meta name="viewport">
         <body>
             <div class="header">
             <img src="Logo.png" class="logo">
@@ -26,8 +27,16 @@
                 <div class="searchtext">Search for burgers</div>
             </div>
             <div class="filtericon"><img src="Filter icon.png" class="filter"></div>
-
             </div>
+            <div class="card" style="width: 18rem;">
+                <img src="Rectangle 22.png" class="card-img-top">
+                <div class="card-body">
+                <h5 class="card-title">Blast crunch chicken</h5>
+                <p class="rating"><img src="Star 2.png">4.6</p>
+                <p class="card-text">$ 5.50<img src="Heart.png" class="heart"><a href="#" class="btn btn-primary"><button class="AddtoCart">Add to cart</button></a></p>
+  </div>
+</div>
+
         </body>
     </head>
 </html>>
