--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
     <head>
                 <link rel="stylesheet" href="styles.css"/>
-                <meta name="viewport">
+                 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <body>
             <div class="header">
             <img src="Logo.png" class="logo">
@@ -36,7 +39,7 @@
                 <p class="card-text">$ 5.50<img src="Heart.png" class="heart"><a href="#" class="btn btn-primary"><button class="AddtoCart">Add to cart</button></a></p>
   </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
         </body>
     </head>
 </html>>
