--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="filtericon"><img src="Filter icon.png" class="filter"></div>
             </div>
-            <div class="card" style="width: 18rem;">
+            <div class="card">
                 <img src="Rectangle 22.png" class="card-img-top">
                 <div class="card-body">
                 <h5 class="card-title">Blast crunch chicken</h5>
