--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html>
     <head>
                 <link rel="stylesheet" href="styles.css"/>
-                 <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger Blast</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
         <body>
             <div class="header">
             <img src="Logo.png" class="logo">
             <img src="hello tim.png" class="profile">
             </div>
             <div class="menu">
+                    <img src="Back button.png" class="back">
                     <button class="menubtn">Menu</button>
+                    <img src="next button.png" class="next">
             </div>
             <div class="menuRow1">
                 <button class="veganBurger">Vegan Burgers</button>
@@ -31,15 +30,38 @@
             </div>
             <div class="filtericon"><img src="Filter icon.png" class="filter"></div>
             </div>
+            <div class="card-row">
             <div class="card">
                 <img src="Rectangle 22.png" class="card-img-top">
                 <div class="card-body">
-                <h5 class="card-title">Blast crunch chicken</h5>
-                <p class="rating"><img src="Star 2.png">4.6</p>
-                <p class="card-text">$ 5.50<img src="Heart.png" class="heart"><a href="#" class="btn btn-primary"><button class="AddtoCart">Add to cart</button></a></p>
-  </div>
+                <div class="card-title">Blast crunch chicken</div>
+                <div class="rating">
+                    <img src="Star 2.png" class="Star">
+                    <div class="rate">4.6</div>
+                </div>
+                <div class="card-text">
+                    <div class="price">$ 5.50</div>
+                    <img src="Heart.png" class="heart">
+                    <a href="#"><button class="AddtoCart">Add to cart</button></a>
+                </div>
+            </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <div class="card">
+                <img src="spicy.png" class="card-img-top">
+                <div class="card-body">
+                <div class="card-title">Blast spicy chicken</div>
+                <div class="rating">
+                    <img src="Star 2.png" class="Star">
+                    <div class="rate">4.8</div>
+                </div>
+                <div class="card-text">
+                    <div class="price">$ 6.25</div>
+                    <img src="Heart.png" class="heart">
+                    <a href="#"><button class="AddtoCart">Add to cart</button></a>
+                </div>
+            </div>
+</div>
+</div>
         </body>
     </head>
 </html>>
