--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-                <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="styles.css"/>
+        <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger Blast</title>
-        <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    </head>
+    <body>
+            <div class="whole">
             <div class="header">
-            <img src="Logo.png" class="logo">
+            <img src="Logo.png" class="logo" alt="Burger_Blast_Logo">
             <img src="hello tim.png" class="profile">
             </div>
             <div class="menu">
@@ -30,38 +35,112 @@
             </div>
             <div class="filtericon"><img src="Filter icon.png" class="filter"></div>
             </div>
-            <div class="card-row">
-            <div class="card">
-                <img src="Rectangle 22.png" class="card-img-top">
-                <div class="card-body">
-                <div class="card-title">Blast crunch chicken</div>
-                <div class="rating">
-                    <img src="Star 2.png" class="Star">
-                    <div class="rate">4.6</div>
-                </div>
-                <div class="card-text">
-                    <div class="price">$ 5.50</div>
-                    <img src="Heart.png" class="heart">
-                    <a href="#"><button class="AddtoCart">Add to cart</button></a>
-                </div>
+<div class="catagories">
+    <div class="catagory1">
+            <div class="card" style="width: 12rem;">
+   <a href="description.html"><img src="Rectangle 22.png" class="card-img-top" alt="Blast crunch chicken"></a>
+    <div class="card-body">
+        <div class="card-title">Blast crunch chicken</div>
+        <div class="rating">
+            <img src="Star 2.png" class="Star" alt="Star"/>
+            <div class="rate">4.6</div>
+        </div>
+        <div class="card-text">
+            <div class="price">$ 5.50</div>
+            <img src="Heart.png" class="heart" alt="Favorite"/>
+            <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
+        </div>
+    </div>
             </div>
-</div>
-    <div class="card">
-                <img src="spicy.png" class="card-img-top">
-                <div class="card-body">
-                <div class="card-title">Blast spicy chicken</div>
-                <div class="rating">
-                    <img src="Star 2.png" class="Star">
-                    <div class="rate">4.8</div>
-                </div>
-                <div class="card-text">
-                    <div class="price">$ 6.25</div>
-                    <img src="Heart.png" class="heart">
-                    <a href="#"><button class="AddtoCart">Add to cart</button></a>
-                </div>
+            <div class="card" style="width: 12rem;">
+    <img src="spicy.png" class="card-img-top" alt="Blast spicy chicken"/>
+    <div class="card-body">
+        <div class="card-title">Blast spicy chicken</div>
+        <div class="rating">
+            <img src="Star 2.png" class="Star" alt="Star"/>
+            <div class="rate">4.8</div>
+        </div>
+        <div class="card-text">
+            <div class="price">$ 6.25</div>
+            <img src="Heart.png" class="heart" alt="Favorite"/>
+            <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
+        </div>
+    </div>
             </div>
+    </div>
+    <div class="catagory2">
+            <div class="card" style="width: 12rem;">
+   <a href="description.html"><img src="fire blast.png" class="card-img-top" alt="Fire Blast chicken"></a>
+    <div class="card-body">
+        <div class="card-title">Fire Blast chicken</div>
+        <div class="rating">
+            <img src="Star 2.png" class="Star" alt="Star"/>
+            <div class="rate">4.7</div>
+        </div>
+        <div class="card-text">
+            <div class="price">$ 6.50</div>
+            <img src="Heart.png" class="heart" alt="Favorite"/>
+            <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
+        </div>
+    </div>
+            </div>
+             <div class="card" style="width: 12rem;">
+   <a href="description.html"><img src="Blast BBQ.png" class="card-img-top" alt="Blast BBQ chicken"></a>
+    <div class="card-body">
+        <div class="card-title">Blast BBQ chicken</div>
+        <div class="rating">
+            <img src="Star 2.png" class="Star" alt="Star"/>
+            <div class="rate">4.5</div>
+        </div>
+        <div class="card-text">
+            <div class="price">$ 5.75</div>
+            <img src="Heart.png" class="heart" alt="Favorite"/>
+            <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
+        </div>
+    </div>
+            </div>
+    </div>
+    <div class="catagory3">
+            <div class="card" style="width: 12rem;">
+   <a href="description.html"><img src="Blast tropicrunch.png" class="card-img-top" alt="Blast tropicrunch chicken"></a>
+   <div class="card-body">
+        <div class="card-title">Blast tropicrunch chicken</div>
+        <div class="rating">
+            <img src="Star 2.png" class="Star" alt="Star"/>
+            <div class="rate">4.8</div>
+        </div>
+        <div class="card-text">
+            <div class="price">$ 5.75</div>
+            <img src="Heart.png" class="heart" alt="Favorite"/>
+            <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
+        </div>
+    </div>
+            </div>
+             <div class="card" style="width: 12rem;">
+   <a href="description.html"><img src="Blast cheese.png" class="card-img-top" alt="Blast cheese chicken"></a>
+   <div class="card-body">
+        <div class="card-title">Blast Cheese chicken</div>
+        <div class="rating">
+            <img src="Star 2.png" class="Star" alt="Star"/>
+            <div class="rate">4.9</div>
+        </div>
+        <div class="card-text">
+            <div class="price">$ 5.25</div>
+            <img src="Heart.png" class="heart" alt="Favorite"/>
+            <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
+        </div>
+    </div>
+            </div>
+    </div>
+</div>
+<div class="footer">
+    <img src="Home icon.png" class="home" alt="Home">
+    <img src="favorite.png" class="favorite" alt="favorites">
+    <a href="shopping_cart.html"><img src="cart.png" class="cart" alt="Add to cart"></a>
+    <img src="bell icon.png" class="bellIcon" alt="Notifications">
+    <img src="profile icon.png" class="profileIcon" alt="My profile">
 </div>
 </div>
-        </body>
-    </head>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+</body>
 </html>>
