--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css"/>
         <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Burger Blast</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    </head>
+<link rel="stylesheet" href="styles.css"/>    
+</head>
     <body>
             <div class="whole">
             <div class="header">
@@ -15,7 +15,7 @@
             </div>
             <div class="menu">
                     <img src="Back button.png" class="back">
-                    <button class="menubtn">Menu</button>
+                    <button class="menulbl">Menu</button>
                     <img src="next button.png" class="next">
             </div>
             <div class="menuRow1">
@@ -31,12 +31,10 @@
             <div class="searchSection">
             <div class="searchBar">
                 <img src="Search icon.png" class="searchicon">
-                <div class="searchtext">Search for burgers</div>
-            </div>
+                <input type="text" class="searchInput" placeholder="Search for burgers"></div>
             <div class="filtericon"><img src="Filter icon.png" class="filter"></div>
             </div>
-<div class="catagories">
-    <div class="catagory1">
+<div class="catagories">   
             <div class="card" style="width: 12rem;">
    <a href="description.html"><img src="Rectangle 22.png" class="card-img-top" alt="Blast crunch chicken"></a>
     <div class="card-body">
@@ -50,8 +48,8 @@
             <img src="Heart.png" class="heart" alt="Favorite"/>
             <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
         </div>
-    </div>
-            </div>
+    </div> 
+    </div>       
             <div class="card" style="width: 12rem;">
     <img src="spicy.png" class="card-img-top" alt="Blast spicy chicken"/>
     <div class="card-body">
@@ -66,9 +64,7 @@
             <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
         </div>
     </div>
-            </div>
-    </div>
-    <div class="catagory2">
+            </div>  
             <div class="card" style="width: 12rem;">
    <a href="description.html"><img src="fire blast.png" class="card-img-top" alt="Fire Blast chicken"></a>
     <div class="card-body">
@@ -83,7 +79,7 @@
             <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
         </div>
     </div>
-            </div>
+    </div>
              <div class="card" style="width: 12rem;">
    <a href="description.html"><img src="Blast BBQ.png" class="card-img-top" alt="Blast BBQ chicken"></a>
     <div class="card-body">
@@ -98,9 +94,7 @@
             <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
         </div>
     </div>
-            </div>
-    </div>
-    <div class="catagory3">
+            </div>  
             <div class="card" style="width: 12rem;">
    <a href="description.html"><img src="Blast tropicrunch.png" class="card-img-top" alt="Blast tropicrunch chicken"></a>
    <div class="card-body">
@@ -115,7 +109,7 @@
             <a href="shopping_cart.html"><button class="AddtoCart">Add to cart</button></a>
         </div>
     </div>
-            </div>
+    </div>
              <div class="card" style="width: 12rem;">
    <a href="description.html"><img src="Blast cheese.png" class="card-img-top" alt="Blast cheese chicken"></a>
    <div class="card-body">
@@ -131,7 +125,6 @@
         </div>
     </div>
             </div>
-    </div>
 </div>
 <div class="footer">
     <img src="Home icon.png" class="home" alt="Home">
@@ -143,4 +136,4 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </body>
-</html>>
+</html>
