--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-<title>Shopping Cart</title>
+        <link rel="stylesheet" href="styles.css"/>
+        <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Burger Description</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     </head>
-    <body>
-<h1>Shopping cart</h1>
+<body>
+    <div class="whole">
+            <div class="header">
+                <img src="Logo.png" class="logo" alt="Burger_Blast_Logo">
+                <img src="hello tim.png" class="profile">
+            </div>
+            <div class="menu">
+                    <a href="index.html"><img src="Back button.png" class="back"></a>
+                    <button class="pnamebtn">Shopping Cart</button>
+                    <img src="next button.png" class="next">
+            </div>
+            
+        <div class="footer">
+        <img src="Home icon.png" class="home" alt="Home">
+        <img src="favorite.png" class="favorite" alt="favorites">
+        <a href="shopping_cart.html"><img src="cart.png" class="cart" alt="Add to cart"></a>
+        <img src="bell icon.png" class="bellIcon" alt="Notifications">
+        <img src="profile icon.png" class="profileIcon" alt="My profile">
+        </div>
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     </body>
 </html>
