--- a/description.html
+++ b/description.html
@@ -18,14 +18,36 @@
                     <button class="pnamebtn">Blast crunch chicken</button>
                     <img src="next button.png" class="next">
             </div>
-            <div class="crunch"><img src="Rectangle 22.png" alt="Blast_crunch_burger"></div>
-            <div class="addBar">
-                <div class="addicon">
-                <img src="minus.png" class="minus">
-                <input type="text" class="add" placeholder="  1  "><img src="Plus.png" class="plus">
-                <div class="tag">$ 5.50</div>
-                </div>
-            </div>
+            <div class="crunch"><img src="Rectangle 22.png" class="crunchImage" alt="Blast_crunch_burger"></div>
+<div class="qty-container">
+<div class="qty-bar">
+    <button class="qty-btn minus">-</button>
+    <span class="qty-value">1</span>
+    <button class="qty-btn plus">+</button>
+    <span class="qty-price">$5.50</span>
+</div>
+</div>
+<div class="details">
+    <h2>Concept</h2>
+    <p>A flagship crispy chicken burger with bold crunch and creamy heat.</p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Crispy fried chicken breast fillet</li>
+      <li>Toasted brioche bun</li>
+      <li>Blast sauce (spicy mayo + paprika)</li>
+      <li>Shredded iceberg lettuce</li>
+      <li>Pickles</li>
+      <li>Cheddar slice</li>
+    </ul>
+    <h2>Estimated Nutrition</h2>
+    <ul>
+        <li>Calories: ~720 kcal</li>
+        <li>Protein: ~34 g</li>
+        <li>Carbs: ~55 g</li>
+        <li>Fat: ~38 g</li>
+        <li>Sodium: ~1100 mg</li>
+    </ul>
+</div>
 <div class="footer">
     <img src="Home icon.png" class="home" alt="Home">
     <img src="favorite.png" class="favorite" alt="favorites">
