--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div> 
     </div>       
             <div class="card" style="width: 12rem;">
-    <img src="spicy.png" class="card-img-top" alt="Blast spicy chicken"/>
+    <a href="description.html"><img src="spicy.png" class="card-img-top" alt="Blast spicy chicken"/></a>
     <div class="card-body">
         <div class="card-title">Blast spicy chicken</div>
         <div class="rating">
