--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -15,16 +15,89 @@
             </div>
             <div class="menu">
                     <a href="index.html"><img src="Back button.png" class="back"></a>
-                    <button class="pnamebtn">Shopping Cart</button>
+                    <button class="cartbtn">Shopping Cart</button>
                     <img src="next button.png" class="next">
             </div>
-            
+            <div class="searchSection">
+            <div class="searchBar">
+                <img src="Location Icon.png" class="searchicon">
+                <input type="text" class="searchInput" placeholder="Select Location">
+              <div class="dropdown">
+  <a class="btn btn-secondary dropdown-toggle arrow" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="#">Oulu</a></li>
+    <li><a class="dropdown-item" href="#">Tuira</a></li>
+    <li><a class="dropdown-item" href="#">Kempele</a></li>
+  </ul>
+</div>
+              </div>
+            </div>
+<div class="cart-list">
+<div class="fullCard">
+  <div class="scardContent">
+    <div class="scardImage">
+      <img src="Blast tropicrunch.png" class="burger" alt="Blast_tropicrunch_chicken">
+    </div>
+    <div class="scardDetails">
+      <div class="cardBody">
+        <h5 class="card-title2">Blast Tropicrunch chicken</h5>
+        <div class="card-text2">$ 11.50</div>
+        </div>
+        <div class="qty-bar2">
+    <button class="qty-btn minus">-</button>
+    <span class="qty-value">2</span>
+    <button class="qty-btn plus">+</button></div>
+    </div>
+  </div>
+  </div>
+  <div class="fullCard">
+  <div class="scardContent">
+    <div class="scardImage">
+      <img src="drink.png" class="burger" alt="Blast_cola_Float">
+    </div>
+    <div class="scardDetails">
+      <div class="cardBody">
+        <h5 class="card-title2">Blast Cola Float</h5>
+        <div class="card-text2">$ 9.00</div>
+        </div>
+        <div class="qty-bar2">
+    <button class="qty-btn minus">-</button>
+    <span class="qty-value">2</span>
+    <button class="qty-btn plus">+</button></div>
+    </div>
+  </div>
+  </div>
+  <div class="fullCard">
+   <div class="scardContent">
+    <div class="scardImage">
+      <img src="Dessert.png" class="burger" alt="Berry_blast_cheese_cake">
+    </div>
+    <div class="scardDetails">
+      <div class="cardBody">
+        <h5 class="card-title2">Berry Blast Cheese Cake</h5>
+        <div class="card-text2">$ 4.50</div>
+        </div>
+        <div class="qty-bar2">
+    <button class="qty-btn minus">-</button>
+    <span class="qty-value">1</span>
+    <button class="qty-btn plus">+</button></div>
+    </div>
+  </div>
+  </div>
+  </div>
+  <div class="totalBar">
+    <div class="tatalAmount">Total Amount</div>
+    <div class="amount">$ 25.00</div>
+  </div>
+  <div class="paybtn">
+    <button class="paynow">Pay now</button>
+  </div>
         <div class="footer">
-        <img src="Home icon.png" class="home" alt="Home">
-        <img src="favorite.png" class="favorite" alt="favorites">
-        <a href="shopping_cart.html"><img src="cart.png" class="cart" alt="Add to cart"></a>
-        <img src="bell icon.png" class="bellIcon" alt="Notifications">
-        <img src="profile icon.png" class="profileIcon" alt="My profile">
+            <img src="Home icon.png" class="home" alt="Home">
+            <img src="favorite.png" class="favorite" alt="favorites">
+            <a href="shopping_cart.html"><img src="cart.png" class="cart" alt="Add to cart"></a>
+            <img src="bell icon.png" class="bellIcon" alt="Notifications">
+            <img src="profile icon.png" class="profileIcon" alt="My profile">
         </div>
     </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
